# calc_memo

./: README.md  memo.txt
Eigen/: Matrix.cpp  Vector.cpp  calc.cpp  dynamic.cpp  func.cpp  solver.cpp
R_lang/: hello.r
cmake/: CMake.md  CMakeLists.txt  class.h  good.cpp  good.h  main.cpp
cmake_2/: CMakeLists.txt
cmake_2/src/: CMakeLists.txt  souce.cpp
cmake_2/test/: CMakeLists.txt  main.cpp
cpp/: func.cpp  func_2d.cpp  vector.cpp  vector_Map.cpp
hello_test/: README.md  hello.cpp
mol_st/: memo.md
oop/: class.cpp  class_1.cpp  class_2.cpp
ppt/: note.md
